--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,12 @@ jobs:
         with:
           ruby-version: '3.0'  # Specify the Ruby version you need
 
-      - name: Install dependencies
-        run: |
-          gem install bundler
-          bundle install
+      - name: Install Jekyll
+        run: gem install jekyll
 
       - name: Build Jekyll site
         run: |
-          bundle exec jekyll build
+          jekyll build
 
       - name: Deploy to GitHub Pages
         if: github.ref == 'refs/heads/main'  # Only deploy on main branch
